--- a/.github/workflows/goats.yml
+++ b/.github/workflows/goats.yml
@@ -1,10 +1,8 @@
 name: Game API Automation
 
 on:
-  release:
-    branches:
-      - master
-      - main
+  schedule:
+    - cron: '* * * * *'
 
 jobs:
   api_catch:
