--- a/.github/workflows/hamster_kompat_phrase_2.yml
+++ b/.github/workflows/hamster_kompat_phrase_2.yml
@@ -1,4 +1,4 @@
-name: Hamster Kombat passive earn schedule
+name: Hamster Kombat passive earn schedule phrase 2
 on: 
   schedule:
     - cron: '0 */2 * * *'
