--- a/.github/workflows/hamster_kompat_phrase_2.yml
+++ b/.github/workflows/hamster_kompat_phrase_2.yml
@@ -36,6 +36,6 @@ jobs:
               --header 'Content-Type: application/json' \
               --data '{
                 "command": {
-                  "type": "ClaimReleasedGamesRewards"
+                  "type": "StartWork"
                 }
               }')
